--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "connected-react-router": "^6.4.0",
     "history": "^4.9.0",
+    "moment": "^2.24.0",
     "radium": "^0.25.2",
     "react": "^16.8.6",
+    "react-big-calendar": "^0.21.0",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "react-sidebar": "^3.0.2",
     "recompose": "^0.30.0"
   },
